# arduino-emulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
emulator/: CMakeLists.txt
emulator/src/: CMakeLists.txt
emulator/src/headers/: avrCpuMemoryObserver.hxx  board.hxx  clock.hxx  cpu.hxx  decoder.hxx  emulator.hxx  instruction.hxx  loader.hxx  memory.hxx
emulator/src/headers/instructions/: ADD.hxx  AND.hxx  ANDI.hxx  BREQ.hxx  BRNE.hxx  CALL.hxx  CLI.hxx  CLR.hxx  CP.hxx  CRI.hxx  EOR.hxx  JMP.hxx  LDI.hxx  MOV.hxx  NOP.hxx  OR.hxx  ORI.hxx  POP.hxx  PUSH.hxx  RET.hxx  RJMP.hxx  SBCI.hxx  SUB.hxx  SUBI.hxx  encode.hxx
emulator/src/src/: avrCpuMemoryObserver.cxx  board.cxx  clock.cxx  cpu.cxx  decoder.cxx  instruction.cxx  loader.cxx  main.cxx  memory.cxx
emulator/src/src/instructions/: ADD.cxx  AND.cxx  ANDI.cxx  BREQ.cxx  BRNE.cxx  CALL.cxx  CLI.cxx  CLR.cxx  CP.cxx  CRI.cxx  EOR.cxx  JMP.cxx  LDI.cxx  MOV.cxx  NOP.cxx  OR.cxx  ORI.cxx  POP.cxx  PUSH.cxx  RET.cxx  RJMP.cxx  SBCI.cxx  SUB.cxx  SUBI.cxx  encode.cxx
emulator/tests/: CMakeLists.txt
emulator/tests/src/: andiTest.cxx  breqTest.cxx  brneTest.cxx  callRetTest.cxx  chainInstructionsTest.cxx  chainedInstructionsComplexTest.cxx  cliTest.cxx  clrTest.cxx  cpTest.cxx  criTest.cxx  decoderTest.cxx  jmpTest.cxx  ldiTest.cxx  loaderTest.cxx  mainTest.cxx  memoryControllerTest.cxx  oriTest.cxx  popTest.cxx  pushTest.cxx  rjmpTest.cxx  sbciTest.cxx  subiTest.cxx
